<resources>
    <string name="app_name">Let\'s Play ASG</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register now</string>
    <string name="team">Team:</string>
    <string name="createTeam">Create team</string>
    <string name="joinTeam">Join team</string>
    <string name="teamName">Name your team!</string>
    <string name="yourNumber">Team number:</string>
    <string name="showMap">Show map</string>
    <string name="leaveTeam">Leave team</string>
    <string name="teamMembers">Team memebers</string>
    <string name="enterNumber">Please enter below the number code of team that you want to join</string>
    <string name="number">Enter number here</string>

    <string name="joinHint">Enter team number</string>
    <string name="teamNumber">Team Number:</string>
    <string name="countTeamMembers">Team Members:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>

    <string-array name="titles">
        <item>User view</item>
        <item>Create team</item>
        <item>Join team</item>
        <item>Help</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>
</resources>
