<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.letsplayasg.UserFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/userImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/userImage"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/black"
        android:text="@string/username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name"
        android:layout_alignTop="@+id/name"
        android:layout_marginLeft="36dp"
        android:textColor="@android:color/black"
        android:text="" />

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_below="@id/name"
        android:textColor="@android:color/black"
        android:text="@string/team" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:textColor="@android:color/black"
        android:text="" />

    <TextView
        android:id="@+id/teamNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/team"
        android:layout_below="@id/team"
        android:textColor="@android:color/black"
        android:text="@string/teamNumber" />

    <TextView
        android:id="@+id/teamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamName"
        android:layout_alignLeft="@+id/teamName"
        android:textColor="@android:color/black"
        android:text="" />



</RelativeLayout>
